# kamikaze

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  main.py
arduino/: CMakeLists.txt  avrdude.conf  kamikaze.cc  output_pin.h  spi_master_example.c  spi_slave_example.cc  stepper_byj48.h  stepper_controller.h
cc/: CMakeLists.txt  README.md  arduinoio.cc  arduinoio.h  capture.cc  capture.h  kamikaze-controller.service  logging.h  main.cc  robot.cc  robot.h  robot_test.cc
cc/src/: CMakeLists.txt  arduinoio.cc  arduinoio.h  capture.cc  main.cc  protocol.proto  robot.cc  robot.h  robot_from_flags.cc  robot_proxy_wrapper.cc  robot_proxy_wrapper.h  robot_test.cc
controller/: CMakeLists.txt  arduinoio.cc  arduinoio.h  capture.cc  capture.h  main.cc  operators.h  robot.cc  robot.h  robot_from_flags.h  robot_proxy_server.cc  robot_proxy_wrapper.h
daughterboard/: daughterboard-cache.lib  daughterboard.bak  daughterboard.kicad_pcb  daughterboard.net  daughterboard.sch
daughterboard/footprints.pretty/: BARREL_JACK.kicad_mod
firmware/: CMakeLists.txt  Makefile  README.md  avrdude.conf  kamikaze.cc  stepper_byj48.h
pcb/: daughterboard-cache.lib  daughterboard-rescue.lib  daughterboard.kicad_pcb  daughterboard.pro
sample_shots/: README.md
services/: configure_autossh.sh  reverse-ssh-proxy.service
uploader/: db.py  file_collector.py  requirements.txt  upload_worker.py  uploader.py
